# localthink-mcp

./: .gitignore  BEST_PRACTICES.md  CHANGELOG.md  CLAUDE_MD_TEMPLATE.md  README.md  SETUP.md  fix_models.py  llms.txt  pyproject.toml
.github/workflows/: lint.yml  publish.yml
claude-md/: set-tier.py  tier-full.md  tier-half.md  tier-quarter.md
src/localthink_mcp/: __init__.py  ollama_client.py  prompts.py  server.py
src/localthink_mcp/core/: __init__.py  async_batch.py  cache.py  config.py  memo.py  passes.py  router.py  structured.py
src/localthink_mcp/gui/: config_gui.py
tests/: run_tests.py
