[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localthink-mcp"
version = "2.1.2"
description = "Local Ollama-backed MCP server — 45 tools, smart buffer, execution filters, persistent scratchpad, settings GUI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]
keywords = ["mcp", "claude", "ollama", "llm", "context-compression", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
localthink-mcp = "localthink_mcp.server:main"

[project.urls]
Homepage = "https://github.com/H3xabah/localthink-mcp"
Repository = "https://github.com/H3xabah/localthink-mcp"
Issues = "https://github.com/H3xabah/localthink-mcp/issues"
Changelog = "https://github.com/H3xabah/localthink-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/localthink_mcp"]
